Implement Castrelyx agent and UI updates